[tool.poetry]
name = "sqlalchemy-helpers"
version = "0.1.0"
description = "Some helpers for sSQLAlchemy"
authors = ["vladiscripts <blagopoluchie12@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
SQLAlchemy = "^2.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
