[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-query-helpers"
version = "1.0.101"
authors = [
    { name = "vladiscripts", email = "blagopoluchie12@gmail.com" },
]
description = "Some helpers for SQLAlchemy"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy"
]

[project.urls]
Homepage = "https://github.com/vladiscripts/sqlalchemy-query-helpers"
Issues = "https://github.com/vladiscripts/sqlalchemy-query-helpers/issues"

[tool.setuptools.packages.find]
where = ["src"]
