[metadata]
name = sqlalchemyhelpers
version = 1.0.0
author = vladiscripts
author_email = blagopoluchie12@gmail.com
description = Some helpers for sSQLAlchemy
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/vladiscripts/sqlalchemyhelpers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Documentation': 'https://github.com/vladiscripts/sqlalchemyhelpers
keywords = sqlalchemy

[options]
package_dir = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
